--- a/package.json
+++ b/package.json
@@ -1,15 +1,18 @@
 {
-    "name": "jscw",
-    "version": "1.0.0",
-    "description": "Javascript Crossword Generator",
-    "main": "index.js",
-    "scripts": {
-        "test": "mocha"
-    },
-    "author": "",
-    "license": "ISC",
-    "devDependencies": {
-        "chai": "^3.5.0",
-        "mocha": "^2.5.3"
-    }
+  "name": "jscw",
+  "version": "1.0.0",
+  "description": "Javascript Crossword Generator",
+  "main": "index.js",
+  "scripts": {
+    "test": "mocha"
+  },
+  "author": "",
+  "license": "ISC",
+  "devDependencies": {
+    "chai": "^3.5.0",
+    "mocha": "^2.5.3"
+  },
+  "dependencies": {
+    "immutable": "^3.8.1"
+  }
 }
